--- a/templates/default/templates.cfg.erb
+++ b/templates/default/templates.cfg.erb
@@ -77,6 +77,7 @@ define service {
   contact_groups                  <%= nagios_attr(:default_contact_groups).join(",") %>
   notification_options            w,u,c,r
   notification_interval           <%= nagios_interval(nagios_attr(:default_service)[:notification_interval]) %>
+  first_notification_delay        <%= nagios_interval(nagios_attr(:default_service)[:first_notification_delay]) %>
   notification_period             24x7
   register                        0
 }
